<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignUpFragment"
    android:background="#F29400"
    >
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="249dp"
        android:layout_height="205dp"
        android:src="@drawable/nitp"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="69dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="75dp"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="35sp"
        android:textStyle="bold|italic"
        android:textColor="#100202"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="287dp"
        app:layout_constraintStart_toStartOf="@id/imageView2"
        app:layout_constraintEnd_toEndOf="@id/imageView2"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="356dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toStartOf="@id/textView"
        app:layout_constraintEnd_toEndOf="@id/textView"
        app:layout_constraintTop_toBottomOf="@id/textView"
        >

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:hint="@string/type_your_email"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"
            android:paddingTop="15dp"
            android:textColorHint="#121010" />
    </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="356dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@+id/card1"
        android:layout_marginTop="10dp"
        app:cardElevation="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PassWord"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/type_your_password"
                android:textColorHint="#121010"
                android:inputType="textPassword|numberPassword"
                android:paddingStart="12dp"
                android:paddingTop="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="356dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@+id/card2"
        android:layout_marginTop="10dp"
        app:cardElevation="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ReTypePassWord"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/retype_your_password"
                android:textColorHint="#121010"
                android:inputType="textPassword|numberPassword"
                android:paddingStart="12dp"
                android:paddingTop="15dp"/>

        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintTop_toBottomOf="@+id/card3"
        android:layout_marginTop="10dp"
        android:backgroundTint="#3F51B5"
        android:layout_height="55dp"
        android:layout_weight="1"
        android:text="@string/next"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="543dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allready_registered"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="598dp"
        app:layout_constraintStart_toStartOf="@id/button"
        app:layout_constraintEnd_toEndOf="@id/button"
        app:layout_constraintTop_toBottomOf="@id/button"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/textView2"
        app:layout_constraintStart_toStartOf="@id/textView2"
        app:layout_constraintTop_toTopOf="@id/textView2"
        android:layout_marginTop="15dp"/>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/textView3"
        app:layout_constraintEnd_toEndOf="@id/textView3"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        android:layout_marginLeft="3dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>